# bayit-dashboard

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  NEXUS.md  PROJECT.md  SECURITY.md  pyproject.toml  vercel.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: branch-guard.yml  dependency-audit.yml  pr-validation.yml
api/: index.py  requirements.txt
backend/: config.py  db.py  main.py  models.py
backend/routers/: assembly.py  auth.py  health.py  parcels.py  zones.py
backend/sync/: config.py  ingest_alr.py  ingest_buildings.py  ingest_parcels.py  ingest_transit.py  ingest_zones.py  utils.py
backend/tests/: conftest.py  test_health.py  test_parcels.py
docs/: AGENT_CHECKLIST.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  env.d.ts  index.css
frontend/src/components/: AssemblyDetailPanel.tsx  AssemblyPopup.tsx  DetailPanel.tsx  FilterPanel.tsx  LoginPage.tsx  MapView.tsx  ParcelPopup.tsx
frontend/src/hooks/: useAssemblyFilters.ts  useAssemblyParcels.ts  useFilters.ts  useMapViewport.ts  useParcels.ts
frontend/src/utils/: api.ts
scripts/: ingest_assembly_csv.py  refresh_view.py  retry_failed_geocodes.py  run_ingest.py  torrc.bayit
sql/migrations/: 001_enable_postgis.sql  002_create_core_tables.sql  003_create_zone_permissions.sql  004_create_enriched_view.sql  005_create_assembly_candidates.sql  006_assembly_rpc.sql
