[project]
name = "bayit-dashboard"
version = "0.1.0"
description = "Richmond BC Property Intelligence Dashboard"
readme = "PROJECT.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.0",
    "geojson>=3.1.0",
    "pydantic-settings>=2.13.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ty>=0.0.1a7",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
    "pip-audit>=2.7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "S",     # bandit (security)
    "B",     # bugbear
    "A",     # builtins shadowing
    "COM",   # commas
    "C4",    # comprehensions
    "DTZ",   # datetime timezone
    "T10",   # debugger
    "ISC",   # implicit string concat
    "PIE",   # misc lints
    "PT",    # pytest style
    "RET",   # return statements
    "SIM",   # simplify
    "TCH",   # type checking imports
    "ARG",   # unused arguments
    "PTH",   # pathlib
    "ERA",   # commented out code
    "RUF",   # ruff-specific
]
ignore = [
    "S101",  # assert allowed in tests
    "COM812", # trailing comma (conflicts with formatter)
    "ISC001", # implicit string concat (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "ARG"]
"backend/sync/**/*.py" = ["T201"]  # allow print in sync scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty]
python-version = "3.11"
src = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
